// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Seo renders description correctly 1`] = `
Object {
  "baseTag": Array [],
  "bodyAttributes": Object {},
  "defer": true,
  "encode": true,
  "htmlAttributes": Object {},
  "linkTags": Array [],
  "metaTags": Array [
    Object {
      "content": "This is a description of Headless Page",
      "name": "description",
    },
    Object {
      "content": "Headless Page | Headless",
      "property": "og:title",
    },
    Object {
      "content": "This is a description of Headless Page",
      "property": "og:description",
    },
    Object {
      "content": "website",
      "property": "og:type",
    },
    Object {
      "content": "og:image",
      "property": "og:image",
    },
    Object {
      "content": "summary",
      "name": "twitter:card",
    },
    Object {
      "content": "@arnonate",
      "name": "twitter:creator",
    },
    Object {
      "content": "Headless Page | Headless",
      "name": "twitter:title",
    },
    Object {
      "content": "This is a description of Headless Page",
      "name": "twitter:description",
    },
    Object {
      "content": "og:image",
      "name": "twitter:image",
    },
  ],
  "noscriptTags": Array [],
  "onChangeClientState": [Function],
  "scriptTags": Array [],
  "styleTags": Array [],
  "title": "Headless Page | Headless",
  "titleAttributes": Object {},
}
`;

exports[`Seo renders metadata correctly 1`] = `
Object {
  "baseTag": Array [],
  "bodyAttributes": Object {},
  "defer": true,
  "encode": true,
  "htmlAttributes": Object {},
  "linkTags": Array [],
  "metaTags": Array [
    Object {
      "content": "This is the description of Headless.",
      "name": "description",
    },
    Object {
      "content": "Headless Page | Headless",
      "property": "og:title",
    },
    Object {
      "content": "This is the description of Headless.",
      "property": "og:description",
    },
    Object {
      "content": "website",
      "property": "og:type",
    },
    Object {
      "content": "og:image",
      "property": "og:image",
    },
    Object {
      "content": "summary",
      "name": "twitter:card",
    },
    Object {
      "content": "@arnonate",
      "name": "twitter:creator",
    },
    Object {
      "content": "Headless Page | Headless",
      "name": "twitter:title",
    },
    Object {
      "content": "This is the description of Headless.",
      "name": "twitter:description",
    },
    Object {
      "content": "og:image",
      "name": "twitter:image",
    },
    Object {
      "content": "content",
      "name": "meta",
    },
    Object {
      "content": "content",
      "property": "meta",
    },
  ],
  "noscriptTags": Array [],
  "onChangeClientState": [Function],
  "scriptTags": Array [],
  "styleTags": Array [],
  "title": "Headless Page | Headless",
  "titleAttributes": Object {},
}
`;

exports[`Seo renders title correctly with default site description and author 1`] = `
Object {
  "baseTag": Array [],
  "bodyAttributes": Object {},
  "defer": true,
  "encode": true,
  "htmlAttributes": Object {},
  "linkTags": Array [],
  "metaTags": Array [
    Object {
      "content": "This is the description of Headless.",
      "name": "description",
    },
    Object {
      "content": "Headless Page | Headless",
      "property": "og:title",
    },
    Object {
      "content": "This is the description of Headless.",
      "property": "og:description",
    },
    Object {
      "content": "website",
      "property": "og:type",
    },
    Object {
      "content": "og:image",
      "property": "og:image",
    },
    Object {
      "content": "summary",
      "name": "twitter:card",
    },
    Object {
      "content": "@arnonate",
      "name": "twitter:creator",
    },
    Object {
      "content": "Headless Page | Headless",
      "name": "twitter:title",
    },
    Object {
      "content": "This is the description of Headless.",
      "name": "twitter:description",
    },
    Object {
      "content": "og:image",
      "name": "twitter:image",
    },
  ],
  "noscriptTags": Array [],
  "onChangeClientState": [Function],
  "scriptTags": Array [],
  "styleTags": Array [],
  "title": "Headless Page | Headless",
  "titleAttributes": Object {},
}
`;
